--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: github pages
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -16,12 +16,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2.4.12
         with:
-          hugo-version: '0.64.0'
+          hugo-version: '0.75.5'
           extended: true
 
       - name: Build
         run: hugo --minify
-        
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
