Change site URL

--- a/config/production/config.yaml
+++ b/config/production/config.yaml
@@ -1,2 +1,2 @@
-baseURL: "https://gizra.github.io/eheza-guide/"
+baseURL: "https://tip-global-health.github.io/eheza-documentation/"
 canonifyURLs: false
