Updates to layout.

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -6,7 +6,13 @@ frontmatter:
   date:
     - ":filename"
     - ":default"
+  lastmod:
+    - "lastmod"
+    - ":git"
+    - "date"
+    - "publishDate"
 markup:
   goldmark:
     renderer:
       unsafe: true
+enableGitInfo: true
